# skills

./: .gitignore  README.md
wiki/: .gitignore  DESIGN.md  README.md  SKILL.md  index.js  package-lock.json  package.json  prompt-optimization-outline-and-synthesis.md  pyproject.toml
wiki/_WIKI/: index.md
wiki/agents/: add.md  homepage.md  index.md  lint.md  search.md  setup.md  synthesize.md
wiki/scripts/: backfill_category_property.py  llm_wiki.py  wiki.py
wiki/src/wikicli/: __init__.py  __main__.py  app.py  category.py  classify.py  cli.py  config.py  core.py  fs.py  lint.py  log.py  markdown.py  notebook.py  packet.py  render.py  search.py  text.py  tree.py  wiki.py
wiki/src/wikicli/commands/: __init__.py  add.py  index.py  lint.py  search.py  show.py  status.py  synthesize.py  tree.py
wiki/src/wikicli/spec/: PLAN.md  spec.md
wiki/templates/: RULES.md.template  category_tree.md.example  config.json.example
wiki/tests/: test_classify.py  test_cli_contract.py  test_markdown.py  test_notebook.py  test_text.py  test_tree.py  test_wiki.py
zettel-eval/: .gitignore  README.md  main.py  plot.py  plot_dspy.py  plot_dspy_best.py  plot_elo.py  pyproject.toml  run_pairwise_opt.py  run_tournament.py
zettel-eval/.agents/: EVAL_PLAN.md  EXECUTION_PLAN.md  IMPLEMENTATION_PLAN.md
zettel-eval/configs/: datasets.yaml  retrieval.yaml
zettel-eval/datasets/processed/andy-matuschak/: corpus.csv  dataset_stats.json  ground_truth.csv  inspection_report.json
zettel-eval/datasets/processed/steph-ango/: corpus.csv  (+3 more)
zettel-eval/output/: best_synthesis_prompt.txt  retrieval_metrics.csv
zettel-eval/output/runs/: tournament.csv
zettel-eval/src/zettel_eval/: __init__.py  cli.py  config.py  logging.py
(+686 files in other folders)
