[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wikicli"
version = "0.1.0"
description = "Deterministic wiki engine for note indexing, search, and linting."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = []

[project.scripts]
wiki = "wikicli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["wikicli*"]
