[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zettel-eval"
version = "0.1.0"
description = "Dataset ingestion and retrieval evaluation scaffolding for zettel-style corpora."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "dspy-ai>=3.1.3",
  "langchain>=1,<2",
  "matplotlib>=3.10.8",
  "numpy>=2.4.3",
  "openai>=2.30.0",
  "pandas>=3.0.1",
  "psutil>=7.2.2",
  "pyyaml>=6.0.2",
  "ragatouille>=0.0.9.post2",
  "seaborn>=0.13.2",
  "tqdm>=4.67.3",
  "transformers<5",
]

[project.scripts]
zettel-eval = "zettel_eval.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["zettel_eval*"]
